backport maone regression fix on displayoin too much buttons

--- a/wiki/src/install/inc/stylesheets/dave.css
+++ b/wiki/src/install/inc/stylesheets/dave.css
@@ -21,10 +21,7 @@ html[data-phase^="downl"] #download-message
 
 #dave-init { display: none };
 
-html[data-phase="init"] #dave-init {
-  display: block;
-
-}
+html[data-phase="init"][data-extension="ok"] #dave-init { display: block }
 
  #dave-init span {
   height: 150px;
@@ -33,7 +30,7 @@ html[data-phase="init"] #dave-init {
   color: #0A0;
 }
 
-html[data-phase="init"] #download-and-verify { display: none };
+html[data-phase="init"][data-extension="ok"] #download-and-verify { display: none }
 
 
 #download-text-state > *,
